--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collabostarterchat",
+  "name": "calm-retreat-9668",
   "version": "0.1.5",
   "description": "A sample Node.js app using Express 4",
   "main": "app.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/collabostarterchat"
+    "url": "https://github.com/heroku/calm-retreat-9668"
   },
   "keywords": [
     "node",
