--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "ejs": "2.3.3"
+    "ejs": "2.3.3",
+    "socket.io": ">= 0.9.6"
   },
   "engines": {
     "node": "0.12.7"
