--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "ejs": "2.3.3",
-    "socket.io": ">= 0.9.6"
+    "socket.io": ">= 0.9.6",
+    "cookie": "2.11.3"
   },
   "engines": {
     "node": "0.12.7"
